--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -300,11 +300,47 @@
     "tags": "Tags",
     "unused": "Unused",
     "search_images": "Search...",
+    "search_containers": "Search...",
     "no_images_match": "No images match your search",
+    "no_containers_match": "No containers match your search",
     "remove_selected_confirm": "Remove selected images?",
     "remove_selected_count": "{{count}} image(s) will be removed",
     "images_removed_count": "{{count}} image(s) removed successfully",
     "images_remove_errors": "{{count}} image(s) failed to remove",
-    "items_range": "{{start}}-{{end}} of {{total}} items"
+    "items_range": "{{start}}-{{end}} of {{total}} items",
+    "stack": "Stack",
+    "ip_address": "IP Address",
+    "quick_actions": "Quick Actions",
+    "published_ports": "Published Ports",
+    "state": "State",
+    "pause": "Pause",
+    "resume": "Resume",
+    "kill": "Kill",
+    "unhealthy": "Unhealthy",
+    "paused": "Paused",
+    "exited": "Exited",
+    "created_state": "Created",
+    "dead": "Dead",
+    "restarting_state": "Restarting",
+    "no_stack": "-",
+    "open_in_browser": "Open in browser",
+    "items_per_page": "Items per page",
+    "pause_success": "Container paused successfully",
+    "resume_success": "Container resumed successfully",
+    "kill_success": "Container killed successfully",
+    "pause_error": "Error pausing container: {{message}}",
+    "resume_error": "Error resuming container: {{message}}",
+    "kill_error": "Error killing container: {{message}}",
+    "search_volumes": "Search...",
+    "no_volumes_match": "No volumes match your search",
+    "volume_remove_not_implemented": "Volume removal is not yet implemented",
+    "search_networks": "Search...",
+    "no_networks_match": "No networks match your search",
+    "network_remove_not_implemented": "Network removal is not yet implemented",
+    "attachable": "Attachable",
+    "ipam_driver": "IPAM Driver",
+    "ipv4_subnet": "IPV4 Subnet",
+    "ipv4_gateway": "IPV4 Gateway",
+    "system": "System"
   }
 }
