--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -300,11 +300,47 @@
     "tags": "Tags",
     "unused": "Não utilizada",
     "search_images": "Buscar...",
+    "search_containers": "Buscar...",
     "no_images_match": "Nenhuma imagem corresponde à busca",
+    "no_containers_match": "Nenhum container corresponde à busca",
     "remove_selected_confirm": "Remover imagens selecionadas?",
     "remove_selected_count": "{{count}} imagem(s) serão removidas",
     "images_removed_count": "{{count}} imagem(s) removidas com sucesso",
     "images_remove_errors": "{{count}} imagem(s) falharam ao remover",
-    "items_range": "{{start}}-{{end}} de {{total}} itens"
+    "items_range": "{{start}}-{{end}} de {{total}} itens",
+    "stack": "Stack",
+    "ip_address": "Endereço IP",
+    "quick_actions": "Ações Rápidas",
+    "published_ports": "Portas Publicadas",
+    "state": "Estado",
+    "pause": "Pausar",
+    "resume": "Retomar",
+    "kill": "Encerrar",
+    "unhealthy": "Não Saudável",
+    "paused": "Pausado",
+    "exited": "Encerrado",
+    "created_state": "Criado",
+    "dead": "Morto",
+    "restarting_state": "Reiniciando",
+    "no_stack": "-",
+    "open_in_browser": "Abrir no navegador",
+    "items_per_page": "Itens por página",
+    "pause_success": "Container pausado com sucesso",
+    "resume_success": "Container retomado com sucesso",
+    "kill_success": "Container encerrado com sucesso",
+    "pause_error": "Erro ao pausar container: {{message}}",
+    "resume_error": "Erro ao retomar container: {{message}}",
+    "kill_error": "Erro ao encerrar container: {{message}}",
+    "search_volumes": "Buscar...",
+    "no_volumes_match": "Nenhum volume corresponde à busca",
+    "volume_remove_not_implemented": "Remoção de volumes ainda não implementada",
+    "search_networks": "Buscar...",
+    "no_networks_match": "Nenhuma rede corresponde à busca",
+    "network_remove_not_implemented": "Remoção de redes ainda não implementada",
+    "attachable": "Anexável",
+    "ipam_driver": "Driver IPAM",
+    "ipv4_subnet": "Sub-rede IPV4",
+    "ipv4_gateway": "Gateway IPV4",
+    "system": "Sistema"
   }
 }
