--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -291,11 +291,47 @@
     "tags": "Tags",
     "unused": "Unbenutzt",
     "search_images": "Suchen...",
+    "search_containers": "Suchen...",
     "no_images_match": "Keine Images gefunden",
+    "no_containers_match": "Keine Container gefunden",
     "remove_selected_confirm": "Ausgewählte Images entfernen?",
     "remove_selected_count": "{{count}} Image(s) werden entfernt",
     "images_removed_count": "{{count}} Image(s) erfolgreich entfernt",
     "images_remove_errors": "{{count}} Image(s) konnten nicht entfernt werden",
-    "items_range": "{{start}}-{{end}} von {{total}} Elementen"
+    "items_range": "{{start}}-{{end}} von {{total}} Elementen",
+    "stack": "Stack",
+    "ip_address": "IP-Adresse",
+    "quick_actions": "Schnellaktionen",
+    "published_ports": "Veröffentlichte Ports",
+    "state": "Zustand",
+    "pause": "Pausieren",
+    "resume": "Fortsetzen",
+    "kill": "Beenden",
+    "unhealthy": "Ungesund",
+    "paused": "Pausiert",
+    "exited": "Beendet",
+    "created_state": "Erstellt",
+    "dead": "Tot",
+    "restarting_state": "Neustart",
+    "no_stack": "-",
+    "open_in_browser": "Im Browser öffnen",
+    "items_per_page": "Elemente pro Seite",
+    "pause_success": "Container erfolgreich pausiert",
+    "resume_success": "Container erfolgreich fortgesetzt",
+    "kill_success": "Container erfolgreich beendet",
+    "pause_error": "Fehler beim Pausieren des Containers: {{message}}",
+    "resume_error": "Fehler beim Fortsetzen des Containers: {{message}}",
+    "kill_error": "Fehler beim Beenden des Containers: {{message}}",
+    "search_volumes": "Suchen...",
+    "no_volumes_match": "Keine Volumes gefunden",
+    "volume_remove_not_implemented": "Volume-Entfernung noch nicht implementiert",
+    "search_networks": "Suchen...",
+    "no_networks_match": "Keine Netzwerke gefunden",
+    "network_remove_not_implemented": "Netzwerk-Entfernung noch nicht implementiert",
+    "attachable": "Anhängbar",
+    "ipam_driver": "IPAM-Treiber",
+    "ipv4_subnet": "IPV4-Subnetz",
+    "ipv4_gateway": "IPV4-Gateway",
+    "system": "System"
   }
 }
