--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -297,11 +297,47 @@
     "tags": "Etiquetas",
     "unused": "Sin usar",
     "search_images": "Buscar...",
+    "search_containers": "Buscar...",
     "no_images_match": "No hay imágenes que coincidan",
+    "no_containers_match": "No hay contenedores que coincidan",
     "remove_selected_confirm": "¿Eliminar imágenes seleccionadas?",
     "remove_selected_count": "Se eliminarán {{count}} imagen(es)",
     "images_removed_count": "{{count}} imagen(es) eliminadas correctamente",
     "images_remove_errors": "{{count}} imagen(es) fallaron al eliminar",
-    "items_range": "{{start}}-{{end}} de {{total}} elementos"
+    "items_range": "{{start}}-{{end}} de {{total}} elementos",
+    "stack": "Stack",
+    "ip_address": "Dirección IP",
+    "quick_actions": "Acciones Rápidas",
+    "published_ports": "Puertos Publicados",
+    "state": "Estado",
+    "pause": "Pausar",
+    "resume": "Reanudar",
+    "kill": "Terminar",
+    "unhealthy": "No Saludable",
+    "paused": "Pausado",
+    "exited": "Detenido",
+    "created_state": "Creado",
+    "dead": "Muerto",
+    "restarting_state": "Reiniciando",
+    "no_stack": "-",
+    "open_in_browser": "Abrir en navegador",
+    "items_per_page": "Elementos por página",
+    "pause_success": "Contenedor pausado correctamente",
+    "resume_success": "Contenedor reanudado correctamente",
+    "kill_success": "Contenedor terminado correctamente",
+    "pause_error": "Error al pausar contenedor: {{message}}",
+    "resume_error": "Error al reanudar contenedor: {{message}}",
+    "kill_error": "Error al terminar contenedor: {{message}}",
+    "search_volumes": "Buscar...",
+    "no_volumes_match": "No hay volúmenes que coincidan",
+    "volume_remove_not_implemented": "La eliminación de volúmenes aún no está implementada",
+    "search_networks": "Buscar...",
+    "no_networks_match": "No hay redes que coincidan",
+    "network_remove_not_implemented": "La eliminación de redes aún no está implementada",
+    "attachable": "Adjuntable",
+    "ipam_driver": "Driver IPAM",
+    "ipv4_subnet": "Subred IPV4",
+    "ipv4_gateway": "Gateway IPV4",
+    "system": "Sistema"
   }
 }
