--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -291,11 +291,47 @@
     "tags": "Tags",
     "unused": "Non utilisé",
     "search_images": "Rechercher...",
+    "search_containers": "Rechercher...",
     "no_images_match": "Aucune image ne correspond",
+    "no_containers_match": "Aucun conteneur ne correspond",
     "remove_selected_confirm": "Supprimer les images sélectionnées ?",
     "remove_selected_count": "{{count}} image(s) seront supprimées",
     "images_removed_count": "{{count}} image(s) supprimées avec succès",
     "images_remove_errors": "{{count}} image(s) n'ont pas pu être supprimées",
-    "items_range": "{{start}}-{{end}} sur {{total}} éléments"
+    "items_range": "{{start}}-{{end}} sur {{total}} éléments",
+    "stack": "Stack",
+    "ip_address": "Adresse IP",
+    "quick_actions": "Actions Rapides",
+    "published_ports": "Ports Publiés",
+    "state": "État",
+    "pause": "Pause",
+    "resume": "Reprendre",
+    "kill": "Tuer",
+    "unhealthy": "Non Sain",
+    "paused": "En Pause",
+    "exited": "Arrêté",
+    "created_state": "Créé",
+    "dead": "Mort",
+    "restarting_state": "Redémarrage",
+    "no_stack": "-",
+    "open_in_browser": "Ouvrir dans le navigateur",
+    "items_per_page": "Éléments par page",
+    "pause_success": "Conteneur mis en pause avec succès",
+    "resume_success": "Conteneur repris avec succès",
+    "kill_success": "Conteneur tué avec succès",
+    "pause_error": "Erreur lors de la mise en pause du conteneur : {{message}}",
+    "resume_error": "Erreur lors de la reprise du conteneur : {{message}}",
+    "kill_error": "Erreur lors de l'arrêt du conteneur : {{message}}",
+    "search_volumes": "Rechercher...",
+    "no_volumes_match": "Aucun volume ne correspond",
+    "volume_remove_not_implemented": "La suppression de volumes n'est pas encore implémentée",
+    "search_networks": "Rechercher...",
+    "no_networks_match": "Aucun réseau ne correspond",
+    "network_remove_not_implemented": "La suppression de réseaux n'est pas encore implémentée",
+    "attachable": "Attachable",
+    "ipam_driver": "Pilote IPAM",
+    "ipv4_subnet": "Sous-réseau IPV4",
+    "ipv4_gateway": "Passerelle IPV4",
+    "system": "Système"
   }
 }
