--- a/src/i18n/locales/it.json
+++ b/src/i18n/locales/it.json
@@ -291,11 +291,47 @@
     "tags": "Tag",
     "unused": "Non utilizzata",
     "search_images": "Cerca...",
+    "search_containers": "Cerca...",
     "no_images_match": "Nessuna immagine corrisponde",
+    "no_containers_match": "Nessun container corrisponde",
     "remove_selected_confirm": "Rimuovere le immagini selezionate?",
     "remove_selected_count": "{{count}} immagine/i verranno rimosse",
     "images_removed_count": "{{count}} immagine/i rimosse con successo",
     "images_remove_errors": "{{count}} immagine/i non sono state rimosse",
-    "items_range": "{{start}}-{{end}} di {{total}} elementi"
+    "items_range": "{{start}}-{{end}} di {{total}} elementi",
+    "stack": "Stack",
+    "ip_address": "Indirizzo IP",
+    "quick_actions": "Azioni Rapide",
+    "published_ports": "Porte Pubblicate",
+    "state": "Stato",
+    "pause": "Pausa",
+    "resume": "Riprendi",
+    "kill": "Termina",
+    "unhealthy": "Non Sano",
+    "paused": "In Pausa",
+    "exited": "Terminato",
+    "created_state": "Creato",
+    "dead": "Morto",
+    "restarting_state": "Riavvio",
+    "no_stack": "-",
+    "open_in_browser": "Apri nel browser",
+    "items_per_page": "Elementi per pagina",
+    "pause_success": "Container messo in pausa con successo",
+    "resume_success": "Container ripreso con successo",
+    "kill_success": "Container terminato con successo",
+    "pause_error": "Errore nella pausa del container: {{message}}",
+    "resume_error": "Errore nel riprendere il container: {{message}}",
+    "kill_error": "Errore nella terminazione del container: {{message}}",
+    "search_volumes": "Cerca...",
+    "no_volumes_match": "Nessun volume corrisponde",
+    "volume_remove_not_implemented": "La rimozione dei volumi non è ancora implementata",
+    "search_networks": "Cerca...",
+    "no_networks_match": "Nessuna rete corrisponde",
+    "network_remove_not_implemented": "La rimozione delle reti non è ancora implementata",
+    "attachable": "Allegabile",
+    "ipam_driver": "Driver IPAM",
+    "ipv4_subnet": "Sottorete IPV4",
+    "ipv4_gateway": "Gateway IPV4",
+    "system": "Sistema"
   }
 }
