--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -291,11 +291,47 @@
     "tags": "タグ",
     "unused": "未使用",
     "search_images": "検索...",
+    "search_containers": "検索...",
     "no_images_match": "一致するイメージがありません",
+    "no_containers_match": "一致するコンテナがありません",
     "remove_selected_confirm": "選択したイメージを削除しますか？",
     "remove_selected_count": "{{count}}個のイメージが削除されます",
     "images_removed_count": "{{count}}個のイメージを削除しました",
     "images_remove_errors": "{{count}}個のイメージの削除に失敗しました",
-    "items_range": "{{start}}-{{end}} / {{total}}件"
+    "items_range": "{{start}}-{{end}} / {{total}}件",
+    "stack": "スタック",
+    "ip_address": "IPアドレス",
+    "quick_actions": "クイックアクション",
+    "published_ports": "公開ポート",
+    "state": "状態",
+    "pause": "一時停止",
+    "resume": "再開",
+    "kill": "強制終了",
+    "unhealthy": "異常",
+    "paused": "一時停止中",
+    "exited": "終了",
+    "created_state": "作成済み",
+    "dead": "停止",
+    "restarting_state": "再起動中",
+    "no_stack": "-",
+    "open_in_browser": "ブラウザで開く",
+    "items_per_page": "ページあたりの項目数",
+    "pause_success": "コンテナを一時停止しました",
+    "resume_success": "コンテナを再開しました",
+    "kill_success": "コンテナを強制終了しました",
+    "pause_error": "コンテナの一時停止エラー: {{message}}",
+    "resume_error": "コンテナの再開エラー: {{message}}",
+    "kill_error": "コンテナの強制終了エラー: {{message}}",
+    "search_volumes": "検索...",
+    "no_volumes_match": "一致するボリュームがありません",
+    "volume_remove_not_implemented": "ボリュームの削除はまだ実装されていません",
+    "search_networks": "検索...",
+    "no_networks_match": "一致するネットワークがありません",
+    "network_remove_not_implemented": "ネットワークの削除はまだ実装されていません",
+    "attachable": "接続可能",
+    "ipam_driver": "IPAMドライバー",
+    "ipv4_subnet": "IPV4サブネット",
+    "ipv4_gateway": "IPV4ゲートウェイ",
+    "system": "システム"
   }
 }
