--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -291,11 +291,47 @@
     "tags": "태그",
     "unused": "미사용",
     "search_images": "검색...",
+    "search_containers": "검색...",
     "no_images_match": "일치하는 이미지가 없습니다",
+    "no_containers_match": "일치하는 컨테이너가 없습니다",
     "remove_selected_confirm": "선택한 이미지를 삭제하시겠습니까?",
     "remove_selected_count": "{{count}}개의 이미지가 삭제됩니다",
     "images_removed_count": "{{count}}개의 이미지가 삭제되었습니다",
     "images_remove_errors": "{{count}}개의 이미지 삭제 실패",
-    "items_range": "{{start}}-{{end}} / {{total}}개"
+    "items_range": "{{start}}-{{end}} / {{total}}개",
+    "stack": "스택",
+    "ip_address": "IP 주소",
+    "quick_actions": "빠른 작업",
+    "published_ports": "게시된 포트",
+    "state": "상태",
+    "pause": "일시 중지",
+    "resume": "재개",
+    "kill": "강제 종료",
+    "unhealthy": "비정상",
+    "paused": "일시 중지됨",
+    "exited": "종료됨",
+    "created_state": "생성됨",
+    "dead": "종료",
+    "restarting_state": "재시작 중",
+    "no_stack": "-",
+    "open_in_browser": "브라우저에서 열기",
+    "items_per_page": "페이지당 항목 수",
+    "pause_success": "컨테이너가 일시 중지되었습니다",
+    "resume_success": "컨테이너가 재개되었습니다",
+    "kill_success": "컨테이너가 강제 종료되었습니다",
+    "pause_error": "컨테이너 일시 중지 오류: {{message}}",
+    "resume_error": "컨테이너 재개 오류: {{message}}",
+    "kill_error": "컨테이너 강제 종료 오류: {{message}}",
+    "search_volumes": "검색...",
+    "no_volumes_match": "일치하는 볼륨이 없습니다",
+    "volume_remove_not_implemented": "볼륨 삭제가 아직 구현되지 않았습니다",
+    "search_networks": "검색...",
+    "no_networks_match": "일치하는 네트워크가 없습니다",
+    "network_remove_not_implemented": "네트워크 삭제가 아직 구현되지 않았습니다",
+    "attachable": "연결 가능",
+    "ipam_driver": "IPAM 드라이버",
+    "ipv4_subnet": "IPV4 서브넷",
+    "ipv4_gateway": "IPV4 게이트웨이",
+    "system": "시스템"
   }
 }
