--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -291,11 +291,47 @@
     "tags": "标签",
     "unused": "未使用",
     "search_images": "搜索...",
+    "search_containers": "搜索...",
     "no_images_match": "没有匹配的镜像",
+    "no_containers_match": "没有匹配的容器",
     "remove_selected_confirm": "删除选中的镜像？",
     "remove_selected_count": "将删除{{count}}个镜像",
     "images_removed_count": "成功删除{{count}}个镜像",
     "images_remove_errors": "{{count}}个镜像删除失败",
-    "items_range": "{{start}}-{{end}} / 共{{total}}项"
+    "items_range": "{{start}}-{{end}} / 共{{total}}项",
+    "stack": "堆栈",
+    "ip_address": "IP地址",
+    "quick_actions": "快速操作",
+    "published_ports": "已发布端口",
+    "state": "状态",
+    "pause": "暂停",
+    "resume": "恢复",
+    "kill": "强制停止",
+    "unhealthy": "不健康",
+    "paused": "已暂停",
+    "exited": "已退出",
+    "created_state": "已创建",
+    "dead": "已停止",
+    "restarting_state": "重启中",
+    "no_stack": "-",
+    "open_in_browser": "在浏览器中打开",
+    "items_per_page": "每页项目数",
+    "pause_success": "容器暂停成功",
+    "resume_success": "容器恢复成功",
+    "kill_success": "容器强制停止成功",
+    "pause_error": "暂停容器错误：{{message}}",
+    "resume_error": "恢复容器错误：{{message}}",
+    "kill_error": "强制停止容器错误：{{message}}",
+    "search_volumes": "搜索...",
+    "no_volumes_match": "没有匹配的卷",
+    "volume_remove_not_implemented": "卷删除功能尚未实现",
+    "search_networks": "搜索...",
+    "no_networks_match": "没有匹配的网络",
+    "network_remove_not_implemented": "网络删除功能尚未实现",
+    "attachable": "可连接",
+    "ipam_driver": "IPAM驱动",
+    "ipv4_subnet": "IPV4子网",
+    "ipv4_gateway": "IPV4网关",
+    "system": "系统"
   }
 }
