--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -36,7 +36,9 @@
     "delete": "Löschen",
     "delete_connection": "Verbindung löschen",
     "confirm_delete_connection": "Möchten Sie die Verbindung \"{{name}}\" wirklich löschen?",
-    "docker": "Docker"
+    "docker": "Docker",
+    "copy": "Kopieren",
+    "copied": "In Zwischenablage kopiert"
   },
   "splash": {
     "starting": "Starten...",
@@ -229,6 +231,9 @@
     "select_connection_desc": "Wählen Sie eine Verbindung, um Docker-Container anzuzeigen.",
     "not_available": "Docker nicht verfügbar",
     "not_available_desc": "Docker ist auf diesem Server nicht installiert oder nicht zugänglich.",
+    "engine_not_found": "Docker Engine nicht gefunden",
+    "engine_not_found_hint": "Wenn auf diesem Server Docker installiert ist, stellen Sie sicher, dass der Benutzer Zugriff auf Docker hat. Versuchen Sie, den Benutzer zur Gruppe 'docker' hinzuzufügen oder überprüfen Sie die sudo-Berechtigungen.",
+    "permission_denied": "Docker-Zugriff verweigert",
     "containers": "Container",
     "container_name": "Name",
     "image": "Image",
@@ -332,6 +337,17 @@
     "ipam_driver": "IPAM-Treiber",
     "ipv4_subnet": "IPV4-Subnetz",
     "ipv4_gateway": "IPV4-Gateway",
-    "system": "System"
+    "system": "System",
+    "stacks": "Stacks",
+    "stack_name": "Name",
+    "type": "Typ",
+    "control": "Steuerung",
+    "limited_control_desc": "Dieser Stack wurde außerhalb von Portainer erstellt, eingeschränkte Verwaltungsoptionen",
+    "loading_stacks": "Stacks werden geladen...",
+    "no_stacks": "Keine Stacks gefunden",
+    "no_stacks_match": "Keine Stacks gefunden",
+    "stacks_load_error": "Fehler beim Laden der Stacks",
+    "search_stacks": "Suchen...",
+    "stack_remove_not_implemented": "Stack-Entfernung noch nicht implementiert"
   }
 }
