--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -338,10 +338,16 @@
     "kill_error": "Error killing container: {{message}}",
     "search_volumes": "Search...",
     "no_volumes_match": "No volumes match your search",
-    "volume_remove_not_implemented": "Volume removal is not yet implemented",
+    "volume_remove_confirm_title": "Remove Volume",
+    "volumes_removed_count": "{{count}} volume(s) removed successfully",
+    "volumes_remove_errors": "{{count}} volume(s) failed to remove",
+    "volume_remove_selected_count": "{{count}} volume(s) will be removed. This action cannot be undone.",
     "search_networks": "Search...",
     "no_networks_match": "No networks match your search",
-    "network_remove_not_implemented": "Network removal is not yet implemented",
+    "network_remove_confirm_title": "Remove Network",
+    "network_remove_selected_count": "{{count}} network(s) will be removed. This action cannot be undone.",
+    "networks_removed_count": "{{count}} network(s) removed successfully",
+    "networks_remove_errors": "{{count}} network(s) failed to remove",
     "attachable": "Attachable",
     "ipam_driver": "IPAM Driver",
     "ipv4_subnet": "IPV4 Subnet",
