--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -338,10 +338,16 @@
     "kill_error": "Erro ao encerrar container: {{message}}",
     "search_volumes": "Buscar...",
     "no_volumes_match": "Nenhum volume corresponde à busca",
-    "volume_remove_not_implemented": "Remoção de volumes ainda não implementada",
+    "volume_remove_confirm_title": "Remover Volume",
+    "volumes_removed_count": "{{count}} volume(s) removido(s) com sucesso",
+    "volumes_remove_errors": "{{count}} volume(s) falharam ao remover",
+    "volume_remove_selected_count": "{{count}} volume(s) serão removidos. Esta ação não pode ser desfeita.",
     "search_networks": "Buscar...",
     "no_networks_match": "Nenhuma rede corresponde à busca",
-    "network_remove_not_implemented": "Remoção de redes ainda não implementada",
+    "network_remove_confirm_title": "Remover Rede",
+    "network_remove_selected_count": "{{count}} rede(s) serão removidas. Esta ação não pode ser desfeita.",
+    "networks_removed_count": "{{count}} rede(s) removida(s) com sucesso",
+    "networks_remove_errors": "{{count}} rede(s) falharam ao remover",
     "attachable": "Anexável",
     "ipam_driver": "Driver IPAM",
     "ipv4_subnet": "Sub-rede IPV4",
